--- a/pizzak.html
+++ b/pizzak.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Olasz pizzéria</title>
+    <link rel="stylesheet" href="pizza.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
     <div class="container bg-white p-0">
