--- a/pizzak.html
+++ b/pizzak.html
@@ -40,7 +40,7 @@
 
           <!--Pizza kínálat-->
 
-          <h2 class="my-4">Kínálatunk</h2>
+          <h2 class="my-4 text-center" id="kinalat">Kínálatunk</h2>
 
           <div class="px-3">
             <div class="p-4 text-center">
