--- a/pizzak.html
+++ b/pizzak.html
@@ -43,42 +43,48 @@
           <h2 class="my-4 text-center" id="kinalat">Kínálatunk</h2>
 
           <div class="px-3">
-            <div class="p-4 text-center">
+        <div class="row">
+            <div class="p-4 text-center col-xl col-md-6">
                 <img src="pizzak/margherita.jpg" class="img-thumbnail">
                 <p>Margherita</p>
             </div>
-            <div class="p-4 text-center">
+            <div class="p-4 text-center col-xl col-md">
                 <img src="pizzak/sonkas.jpg" class="img-thumbnail">
                 <p>Sonkás</p>
             </div>
-            <div class="p-4 text-center">
+            <div class="p-4 text-center col-xl col-md-6">
                 <img src="pizzak/songoku.jpg" class="img-thumbnail">
                 <p>Songoku</p>
             </div>
-            <div class="p-4 text-center">
+        </div>
+        <div class="row">
+            <div class="p-4 text-center col-xl col-md-6">
                 <img src="pizzak/magyaros.jpg" class="img-thumbnail">
                 <p>Magyaros</p>
             </div>
-            <div class="p-4 text-center">
+            <div class="p-4 text-center col-xl col-md">
                 <img src="pizzak/hawaii.jpg" class="img-thumbnail">
                 <p>Hawaii</p>
             </div>
-            <div class="p-4 text-center">
+            <div class="p-4 text-center col-xl col-md-6">
                 <img src="pizzak/szalamis.jpg" class="img-thumbnail">
                 <p>Szalámis</p>
             </div>
-            <div class="p-4 text-center">
+        </div>
+        <div class="row">
+            <div class="p-4 text-center col-xl col-md-6">
                 <img src="pizzak/tonhalas.jpg" class="img-thumbnail">
                 <p>Tonhalas</p>
             </div>
-            <div class="p-4 text-center">
+            <div class="p-4 text-center col-xl col-md">
                 <img src="pizzak/bolognai.jpg" class="img-thumbnail">
                 <p>Bolognai</p>
             </div>
-            <div class="p-4 text-center">
+            <div class="p-4 text-center col-xl col-md-6">
                 <img src="pizzak/kalifornia.jpg" class="img-thumbnail">
                 <p>Kalifornia</p>
             </div>
+        </div>
         </div>
 
         <!--Ajánlat-->
