--- a/pizzak.html
+++ b/pizzak.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="nyitvatartas.html">Nyitvatartás</a>
               </li>
             </ul>
-          </nav>
+        </nav>
 
           <!--Pizza kínálat-->
 
@@ -94,7 +94,7 @@
 
         <!--Lábléc-->     
         <footer class="bg-secondary p-3 text-center text-white">
-            <p>Képek forrása: Nana pizza</p>
+            <p>Képek forrása: <a href="https://nanapizza.hu" target="blank">Nana pizza</a></p>
         </footer>
 
     </div>
